--- a/Project Files (FREE)/STARTER-FILES/index.html
+++ b/Project Files (FREE)/STARTER-FILES/index.html
@@ -11,6 +11,18 @@
 
 <body>
 
+  <!-- 
+    .wrapper >  .ring   >   svg               >   circle
+
+                .timer  >   .time             >   .minutes  >   input 
+                                              >   .colon
+                                              >   .second   >   input
+
+                        >   button.start
+                        >   button.settings   >   img
+
+   -->
+
   <div class="wrapper">
     <div class="ring">
       <svg width="518" height="518" viewBox="0 0 518 518">
