trying building the toggle timer function

--- a/Challenge 1/STARTER-FILES/index.html
+++ b/Challenge 1/STARTER-FILES/index.html
@@ -16,7 +16,7 @@
 
                 .timer  >   .time             >   .minutes  >   input 
                                               >   .colon
-                                              >   .second   >   input
+                                              >   .seconds   >   input
 
                         >   button.start
                         >   button.settings   >   img
