thêm link code tổng quát vào code trực tiếp

--- a/Challenge 1/STARTER-FILES/index.html
+++ b/Challenge 1/STARTER-FILES/index.html
@@ -48,6 +48,7 @@
   </div>
 
   <script src="1script.js"></script>
+  <a style="display:none" href="https://app.tryeraser.com/workspace/3t8ndx9FyJwJadKzMSFF?elements=iJEUTIT1VbfTizhkWIbQRw"></a>
 
 </body>
 
