set up the basic and the first step of challenge 2

--- a/Challenge 2/STARTER-FILES/index.html
+++ b/Challenge 2/STARTER-FILES/index.html
@@ -10,6 +10,30 @@
 </head>
 
 <body>
+  <!-- 
+    .wrapper.menu >   .panel      >   h1
+                                  >   ul.menu     >   li*6    >   .plate    >   img
+
+                                                              >   .content  >   p.menu-item
+                                                                            >   p.price
+                                                                            >   button.in-cart/.add  >   img             
+
+
+                  >   .panel.cart >   h1 
+                                  >   ul.cart-summary   >   li*2  >   .plate              >   img
+                                                                                          >   .quantity
+
+                                                                  >   .content            >   p.menu-item
+                                                                                          >   p.price
+
+                                                                  >   .quantity__wrapper  >   button.decrease   >  img
+                                                                                          >   button.increase   >  img
+                                                                                          
+                                                                  >   .subtotal
+                                  >   .totals 
+
+
+   -->
 
   <div class="wrapper menu">
     <div class="panel">
