--- a/Challenge 2/STARTER-FILES/index.html
+++ b/Challenge 2/STARTER-FILES/index.html
@@ -20,13 +20,14 @@
 
 
                   >   .panel.cart >   h1 
-                                  >   ul.cart-summary   >   li*2  >   .plate              >   img
-                                                                                          >   .quantity
+                                  >   ul.cart-summary   >   li*2  >   .plate              >   img         :image
+                                                                                          >   .quantity    
 
-                                                                  >   .content            >   p.menu-item
-                                                                                          >   p.price
+                                                                  >   .content            >   p.menu-item :name
+                                                                                          >   p.price     :price
 
                                                                   >   .quantity__wrapper  >   button.decrease   >  img
+                                                                                          >   .quantity
                                                                                           >   button.increase   >  img
                                                                                           
                                                                   >   .subtotal
@@ -177,6 +178,7 @@
     </div>
   </div>
   <script src="app.js"></script>
+  <a style='display:none' href="https://app.tryeraser.com/workspace/3t8ndx9FyJwJadKzMSFF?elements=ozO02Y-mvUrI1lCKDqgw0g"></a>
 </body>
 
 </html>
