upgrade the addItem function

--- a/Challenge 2/STARTER-FILES/index.html
+++ b/Challenge 2/STARTER-FILES/index.html
@@ -47,10 +47,7 @@
           <div class="content">
             <p class="menu-item">French Fries with Ketchup</p>
             <p class="price">$2.23</p>
-            <button class="in-cart">
-              <img src="images/check.svg" alt="Check" />
-              In Cart
-            </button>
+            <button class="add">Add to Cart</button>
           </div>
         </li>
         <li>
@@ -111,54 +108,6 @@
       <!-- <p class="empty">Your cart is empty.</p> -->
 
       <ul class="cart-summary">
-
-        <!-- item 1 -->
-        <li>
-          <div class="plate">
-            <img src="images/plate__fish-sticks-fries.png" alt="Fish Sticks and Fries" class="plate" />
-            <div class="quantity">1</div>
-          </div>
-          <div class="content">
-            <p class="menu-item">Fish Sticks and Fries</p>
-            <p class="price">$6.34</p>
-          </div>
-          <div class="quantity__wrapper">
-            <button class="decrease">
-              <img src="images/chevron.svg" />
-            </button>
-            <div class="quantity">1</div>
-            <button class="increase">
-              <img src="images/chevron.svg" />
-            </button>
-          </div>
-          <div class="subtotal">
-            $6.34
-          </div>
-        </li>
-
-        <!-- item 2 -->
-        <li>
-          <div class="plate">
-            <img src="images/plate__french-fries.png" alt="French Fries" class="plate" />
-            <div class="quantity">2</div>
-          </div>
-          <div class="content">
-            <p class="menu-item">French Fries with Ketchup</p>
-            <p class="price">$2.23</p>
-          </div>
-          <div class="quantity__wrapper">
-            <button class="decrease">
-              <img src="images/chevron.svg" />
-            </button>
-            <div class="quantity">2</div>
-            <button class="increase">
-              <img src="images/chevron.svg" />
-            </button>
-          </div>
-          <div class="subtotal">
-            $4.46
-          </div>
-        </li>
       </ul>
 
       <div class="totals">
@@ -177,7 +126,7 @@
       </div>
     </div>
   </div>
-  <script src="app.js"></script>
+  <script src="1app.js"></script>
   <a style='display:none' href="https://app.tryeraser.com/workspace/3t8ndx9FyJwJadKzMSFF?elements=ozO02Y-mvUrI1lCKDqgw0g"></a>
 </body>
 
