--- a/Challenge 2/STARTER-FILES/index.html
+++ b/Challenge 2/STARTER-FILES/index.html
@@ -126,8 +126,8 @@
       </div>
     </div>
   </div>
-  <script src="1app.js"></script>
-  <a style='display:none' href="https://app.tryeraser.com/workspace/3t8ndx9FyJwJadKzMSFF?elements=ozO02Y-mvUrI1lCKDqgw0g"></a>
+  <script src="app.js"></script>
+  <a style='display:none' href="https://app.tryeraser.com/workspace/3t8ndx9FyJwJadKzMSFF?elements=hrr3eGpLRFlBNFZFyKLmMA"></a>
 </body>
 
 </html>
